--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="page">
       <div class="layout">
-        <!-- <header class="header">
+        <header class="header">
           <a
             class="header__logo"
             target="_blank"
@@ -33,10 +33,10 @@
             </li>
           </ul>
           <button class="header__button">Кого мы ищем</button>
-        </header> -->
+        </header>
 
         <main class="content">
-          <!-- <section class="section1 main-width-block">
+          <section class="section1 main-width-block">
             <div class="section1__main">
               <div class="section1__text">
                 <h2 class="section1__title">
@@ -66,12 +66,19 @@
               </div>
               <button class="quizz__btn btn">Выбери своего игрока!</button>
             </div>
-          </section> -->
+          </section>
 
           <section class="what-give main-width-block">
             <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
             <div class="what-give__container">
               <ul class="what-give__cards-list">
+                <li class="what-give__card what-give__animation">
+                  <h4 class="what-give__card-title">Дополнительный доход</h4>
+                  <p class="what-give__card-text">
+                    Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
+                    занятости 2–3 часа в день
+                  </p>
+                </li>
                 <li class="what-give__card what-give__animation">
                   <h4 class="what-give__card-title">
                     Общение с людьми из EdTech
@@ -89,11 +96,10 @@
                     прокачивай свои soft skills
                   </p>
                 </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Дополнительный доход</h4>
-                  <p class="what-give__card-text">
-                    Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
-                    занятости 2–3 часа в день
+                  <li class="what-give__card what-give__animation">
+                    <h4 class="what-give__card-title">Развитие внутри роли</h4>
+                    <p class="what-give__card-text">
+                    Ты сможешь стать старшим наставником или сеньор-ревьювером
                   </p>
                 </li>
                 <li class="what-give__card what-give__animation">
@@ -105,18 +111,12 @@
                     не бойся ими делиться
                   </p>
                 </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Развитие внутри роли</h4>
-                  <p class="what-give__card-text">
-                    Ты сможешь стать старшим наставником или сеньор-ревьювером
-                  </p>
-                </li>
               </ul>
               <button class="what-give__btn">К открытым позициям</button>
             </div>
           </section>
 
-          <!-- <section class="section3"></section>
+          <section class="section3"></section>
           <section class="section4"></section>
           <section class="section5"></section>
           <section class="vacancy main-width-block">
@@ -397,9 +397,8 @@
           </section>
         </main>
 
-        <footer class="footer"></footer> -->
+        <footer class="footer"></footer>
       </div>
     </div>
-    <!-- <script src="./index.js" defer></script> -->
   </body>
 </html>
