--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>HackathonYandex</title>
   </head>
 
-  <body>
+  <!-- <body>
     <div class="page">
       <div class="layout">
         <header class="header">
@@ -66,60 +66,10 @@
               </div>
               <button class="quizz__btn btn">Выбери своего игрока!</button>
             </div>
-          </section>
+          </section> -->
 
-          <section class="what-give main-width-block">
-            <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
-            <div class="what-give__container">
-              <ul class="what-give__cards-list">
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Дополнительный доход</h4>
-                  <p class="what-give__card-text">
-                    Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
-                    занятости 2–3 часа в день
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">
-                    Общение с людьми из EdTech
-                  </h4>
-                  <p class="what-give__card-text">
-                    Ты станешь частью сообщества экспертов и посмотришь
-                    на мир онлайн-образования изнутри
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Саморазвитие</h4>
-                  <p class="what-give__card-text">
-                    Публикуй статьи в нашем блоге и выступай на мероприятиях,
-                    чтобы как можно больше людей узнали о тебе как об эксперте,
-                    прокачивай свои soft skills
-                  </p>
-                </li>
-                  <li class="what-give__card what-give__animation">
-                    <h4 class="what-give__card-title">Развитие внутри роли</h4>
-                    <p class="what-give__card-text">
-                    Ты сможешь стать старшим наставником или сеньор-ревьювером
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">
-                    Возможность менять жизни людей к лучшему
-                  </h4>
-                  <p class="what-give__card-text">
-                    Тысячи наших студентов нуждаются в твоих знаниях и опыте —
-                    не бойся ими делиться
-                  </p>
-                </li>
-              </ul>
-              <button class="what-give__btn">К открытым позициям</button>
-            </div>
-          </section>
 
-          <section class="section3"></section>
-          <section class="section4"></section>
-          <section class="section5"></section>
-          <section class="vacancy main-width-block">
+          <!-- <section class="vacancy main-width-block">
             <h2 class="section-title vacancy__title">Кого мы ищем</h2>
             <form class="vacancy__filter">
               <select class="vacancy__filter-job">
@@ -401,8 +351,8 @@
       </div>
     </div>
   </body>
-</html>
-=======
+</html> -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -431,7 +381,6 @@
         <button class="header__button">Кого мы ищем</button>
       </header>
 
-
       <main class="content">
         <section class="section1 main-width-block">
           <div class="section1__main">
@@ -459,9 +408,53 @@
           </div>
         </section>
 
-        <section class="section2">
-
-        </section>
+                  <section class="what-give main-width-block">
+            <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
+            <div class="what-give__container">
+              <ul class="what-give__cards-list">
+                <li class="what-give__card what-give__animation">
+                  <h4 class="what-give__card-title">Дополнительный доход</h4>
+                  <p class="what-give__card-text">
+                    Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
+                    занятости 2–3 часа в день
+                  </p>
+                </li>
+                <li class="what-give__card what-give__animation">
+                  <h4 class="what-give__card-title">
+                    Общение с людьми из EdTech
+                  </h4>
+                  <p class="what-give__card-text">
+                    Ты станешь частью сообщества экспертов и посмотришь
+                    на мир онлайн-образования изнутри
+                  </p>
+                </li>
+                <li class="what-give__card what-give__animation">
+                  <h4 class="what-give__card-title">Саморазвитие</h4>
+                  <p class="what-give__card-text">
+                    Публикуй статьи в нашем блоге и выступай на мероприятиях,
+                    чтобы как можно больше людей узнали о тебе как об эксперте,
+                    прокачивай свои soft skills
+                  </p>
+                </li>
+                  <li class="what-give__card what-give__animation">
+                    <h4 class="what-give__card-title">Развитие внутри роли</h4>
+                    <p class="what-give__card-text">
+                    Ты сможешь стать старшим наставником или сеньор-ревьювером
+                  </p>
+                </li>
+                <li class="what-give__card what-give__animation">
+                  <h4 class="what-give__card-title">
+                    Возможность менять жизни людей к лучшему
+                  </h4>
+                  <p class="what-give__card-text">
+                    Тысячи наших студентов нуждаются в твоих знаниях и опыте —
+                    не бойся ими делиться
+                  </p>
+                </li>
+              </ul>
+              <button class="what-give__btn">К открытым позициям</button>
+            </div>
+          </section>
 
         <section class="teaching main-width-block" id="teaching">
           <h2 class="section-title teaching__title">Чему мы учим?</h2>
