добавил ярокь на вторую секцию

--- a/src/index.html
+++ b/src/index.html
@@ -366,7 +366,7 @@
         <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума"></a>
         <ul class="header__questions">
           <li class="header__question-text">
-            <a class="header__question" href="#">Преимущества сотрудничества</a>
+            <a class="header__question" href="#benefits">Преимущества сотрудничества</a>
           </li>
           <li class="header__question-text">
             <a class="header__question" href="#teaching">Направления обучения</a>
@@ -408,7 +408,7 @@
           </div>
         </section>
 
-                  <section class="what-give main-width-block">
+        <section class="what-give main-width-block" id="benefits">
             <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
             <div class="what-give__container">
               <ul class="what-give__cards-list">
@@ -454,7 +454,7 @@
               </ul>
               <button class="what-give__btn">К открытым позициям</button>
             </div>
-          </section>
+        </section>
 
         <section class="teaching main-width-block" id="teaching">
           <h2 class="section-title teaching__title">Чему мы учим?</h2>
