добавлен якорь на втрорую секцию

--- a/src/index.html
+++ b/src/index.html
@@ -6,353 +6,6 @@
     <title>HackathonYandex</title>
   </head>
 
-  <!-- <body>
-    <div class="page">
-      <div class="layout">
-        <header class="header">
-          <a
-            class="header__logo"
-            target="_blank"
-            href="https://practicum.yandex.ru/"
-            alt="Главная яндекс практикума"
-          ></a>
-          <ul class="header__questions">
-            <li class="header__question-text">
-              <a class="header__question" href="#"
-                >Преимущества сотрудничества</a
-              >
-            </li>
-            <li class="header__question-text">
-              <a class="header__question" href="#">Направления обучения</a>
-            </li>
-            <li class="header__question-text">
-              <a class="header__question" href="#">Отзывы</a>
-            </li>
-            <li class="header__question-text">
-              <a class="header__question" href="#">Частые вопросы</a>
-            </li>
-          </ul>
-          <button class="header__button">Кого мы ищем</button>
-        </header>
-
-        <main class="content">
-          <section class="section1 main-width-block">
-            <div class="section1__main">
-              <div class="section1__text">
-                <h2 class="section1__title">
-                  Станьте наставником или ревьюером
-                </h2>
-                <h2 class="section1__subtitle">и делитесь своим опытом</h2>
-                <p class="section1__description">
-                  Ищем наставников и ревьюеров для программирования, анализа
-                  данных, менеджмента, маркетинга или дизайна
-                </p>
-                <button class="section1__btn btn">
-                  Почему Яндекс Практикум?
-                </button>
-              </div>
-              <img
-                class="section1__img"
-                src="<%=require('./images/title-photo.jpg')%>"
-                alt="девушка в голубой рубашке"
-              />
-            </div>
-            <div class="quizz">
-              <div class="quizz__info">
-                <h3 class="quizz__title">Кто ты?</h3>
-                <p class="quizz__text">
-                  Ответь на вопросы, а мы подскажем какая роль тебе подходит
-                </p>
-              </div>
-              <button class="quizz__btn btn">Выбери своего игрока!</button>
-            </div>
-          </section> -->
-
-
-          <!-- <section class="vacancy main-width-block">
-            <h2 class="section-title vacancy__title">Кого мы ищем</h2>
-            <form class="vacancy__filter">
-              <select class="vacancy__filter-job">
-                <option selected>Для наставников</option>
-                <option>Для ревьюеров</option>
-              </select>
-              <fieldset class="vacancy__filter-items">
-                <input
-                  name="vacancy-type"
-                  value="programming"
-                  id="vacancy1"
-                  class="vacancy__filter-radio"
-                  type="radio"
-                />
-                <label for="vacancy1" class="vacancy__filter-item"
-                  >Аналитика</label
-                >
-                <input
-                  checked
-                  name="vacancy-type"
-                  value="analys"
-                  id="vacancy2"
-                  class="vacancy__filter-radio"
-                  type="radio"
-                />
-                <label for="vacancy2" class="vacancy__filter-item"
-                  >Программирование</label
-                >
-                <input
-                  name="vacancy-type"
-                  value="design"
-                  id="vacancy3"
-                  class="vacancy__filter-radio"
-                  type="radio"
-                />
-                <label for="vacancy3" class="vacancy__filter-item"
-                  >Дизайн</label
-                >
-                <input
-                  name="vacancy-type"
-                  value="marketing"
-                  id="vacancy4"
-                  class="vacancy__filter-radio"
-                  type="radio"
-                />
-                <label for="vacancy4" class="vacancy__filter-item"
-                  >Маркетинг</label
-                >
-                <input
-                  name="vacancy-type"
-                  value="management"
-                  id="vacancy5"
-                  class="vacancy__filter-radio"
-                  type="radio"
-                />
-                <label for="vacancy5" class="vacancy__filter-item"
-                  >Менеджмент</label
-                >
-              </fieldset>
-            </form>
-            <ul class="vacancy__results">
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-              <li class="vacancy__results-item">
-                <h3 class="vacancy__results-item-title">
-                  Наставник на курс "Мидл фронтенд-разработчик"
-                </h3>
-                <div class="vacancy__results-item-description">
-                  <p class="vacancy__results-item-paragraph">
-                    [Оплата за ведение группы]
-                  </p>
-                  <p class="vacancy__results-item-paragraph">
-                    [В среднем 35000 &#8381; в месяц]
-                  </p>
-                </div>
-              </li>
-            </ul>
-            <div class="vacancy__banner">
-              <div class="vacancy__banner-heading">
-                <h3 class="vacancy__banner-title">
-                  Не нашёл подходящее предложение?
-                </h3>
-                <p class="vacancy__banner-subtitle">
-                  Оставь контакты и мы подберём тебе роль в нашей коменде
-                </p>
-              </div>
-              <button class="vacancy__banner-button" type="button">
-                Оставить отклик
-              </button>
-            </div>
-          </section>
-          <section class="questions main-width-block">
-            <h2 class="section-title">Нас часто спрашивают...</h2>
-            <ul class="questions__accordeon">
-              <li class="questions__accordeon-item">
-                <input
-                  class="questions__accordeon-checkbox"
-                  type="checkbox"
-                  id="rd1"
-                />
-                <label for="rd1" class="questions__accordeon-question">
-                  У меня совсем нет преподовательского опыта. Я могу вести у вас
-                  курсы?
-                </label>
-                <p class="questions__accordeon-content">
-                  У меня совсем нет преподовательского опыта. Я могу вести у вас
-                  курсы? У меня совсем нет преподовательского опыта. Я могу
-                  вести у вас курсы?
-                </p>
-              </li>
-              <li class="questions__accordeon-item">
-                <input
-                  class="questions__accordeon-checkbox"
-                  type="checkbox"
-                  id="rd2"
-                />
-                <label for="rd2" class="questions__accordeon-question">
-                  Какой график и формат работы?
-                </label>
-                <p class="questions__accordeon-content">
-                  У меня совсем нет преподовательского опыта. Я могу вести у вас
-                  курсы? У меня совсем нет преподовательского опыта. Я могу
-                  вести у вас курсы?
-                </p>
-              </li>
-              <li class="questions__accordeon-item">
-                <input
-                  class="questions__accordeon-checkbox"
-                  type="checkbox"
-                  id="rd3"
-                />
-                <label for="rd3" class="questions__accordeon-question">
-                  Как меня введут в работу? И помогут ли, если появятся вопросы?
-                </label>
-                <p class="questions__accordeon-content">
-                  У меня совсем нет преподовательского опыта. Я могу вести у вас
-                  курсы? У меня совсем нет преподовательского опыта. Я могу
-                  вести у вас курсы?
-                </p>
-              </li>
-              <li class="questions__accordeon-item">
-                <input
-                  class="questions__accordeon-checkbox"
-                  type="checkbox"
-                  id="rd4"
-                />
-                <label for="rd4" class="questions__accordeon-question">
-                  Смогу ли я работать на нескольких направлениях, если обладаю
-                  экчпертизой в каждом из них?
-                </label>
-                <p class="questions__accordeon-content">
-                  У меня совсем нет преподовательского опыта. Я могу вести у вас
-                  курсы? У меня совсем нет преподовательского опыта. Я могу
-                  вести у вас курсы?
-                </p>
-              </li>
-              <li class="questions__accordeon-item">
-                <input
-                  class="questions__accordeon-checkbox"
-                  type="checkbox"
-                  id="rd5"
-                />
-                <label for="rd5" class="questions__accordeon-question">
-                  Я не гражданин России, смогу ли я сотрудничать?
-                </label>
-                <p class="questions__accordeon-content">
-                  У меня совсем нет преподовательского опыта. Я могу вести у вас
-                  курсы? У меня совсем нет преподовательского опыта. Я могу
-                  вести у вас курсы?
-                </p>
-              </li>
-            </ul>
-          </section>
-        </main>
-
-        <footer class="footer"></footer>
-      </div>
-    </div>
-  </body>
-</html> -->
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -366,7 +19,7 @@
         <a class="header__logo" target="_blank" href="https://practicum.yandex.ru/" alt="Главная яндекс практикума"></a>
         <ul class="header__questions">
           <li class="header__question-text">
-            <a class="header__question" href="#">Преимущества сотрудничества</a>
+            <a class="header__question" href="#benefits">Преимущества сотрудничества</a>
           </li>
           <li class="header__question-text">
             <a class="header__question" href="#teaching">Направления обучения</a>
@@ -408,7 +61,7 @@
           </div>
         </section>
 
-                  <section class="what-give main-width-block">
+        <section class="what-give main-width-block" id="benefits">
             <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
             <div class="what-give__container">
               <ul class="what-give__cards-list">
@@ -454,7 +107,7 @@
               </ul>
               <button class="what-give__btn">К открытым позициям</button>
             </div>
-          </section>
+        </section>
 
         <section class="teaching main-width-block" id="teaching">
           <h2 class="section-title teaching__title">Чему мы учим?</h2>
