--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HackathonYandex</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HackathonYandex</title>
+</head>
 
 <head>
   <meta charset="UTF-8">
@@ -62,51 +63,51 @@
         </section>
 
         <section class="what-give main-width-block" id="benefits">
-            <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
-            <div class="what-give__container">
-              <ul class="what-give__cards-list">
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Дополнительный доход</h4>
-                  <p class="what-give__card-text">
-                    Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
-                    занятости 2–3 часа в день
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">
-                    Общение с людьми из EdTech
-                  </h4>
-                  <p class="what-give__card-text">
-                    Ты станешь частью сообщества экспертов и посмотришь
-                    на мир онлайн-образования изнутри
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">Саморазвитие</h4>
-                  <p class="what-give__card-text">
-                    Публикуй статьи в нашем блоге и выступай на мероприятиях,
-                    чтобы как можно больше людей узнали о тебе как об эксперте,
-                    прокачивай свои soft skills
-                  </p>
-                </li>
-                  <li class="what-give__card what-give__animation">
-                    <h4 class="what-give__card-title">Развитие внутри роли</h4>
-                    <p class="what-give__card-text">
-                    Ты сможешь стать старшим наставником или сеньор-ревьювером
-                  </p>
-                </li>
-                <li class="what-give__card what-give__animation">
-                  <h4 class="what-give__card-title">
-                    Возможность менять жизни людей к лучшему
-                  </h4>
-                  <p class="what-give__card-text">
-                    Тысячи наших студентов нуждаются в твоих знаниях и опыте —
-                    не бойся ими делиться
-                  </p>
-                </li>
-              </ul>
-              <button class="what-give__btn">К открытым позициям</button>
-            </div>
+          <h2 class="section-title">Что Яндекс Практикум даст тебе</h2>
+          <div class="what-give__container">
+            <ul class="what-give__cards-list">
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">Дополнительный доход</h4>
+                <p class="what-give__card-text">
+                  Ты будешь зарабатывать 35–55 тысяч рублей в месяц при гибкой
+                  занятости 2–3 часа в день
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">
+                  Общение с людьми из EdTech
+                </h4>
+                <p class="what-give__card-text">
+                  Ты станешь частью сообщества экспертов и посмотришь
+                  на мир онлайн-образования изнутри
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">Саморазвитие</h4>
+                <p class="what-give__card-text">
+                  Публикуй статьи в нашем блоге и выступай на мероприятиях,
+                  чтобы как можно больше людей узнали о тебе как об эксперте,
+                  прокачивай свои soft skills
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">Развитие внутри роли</h4>
+                <p class="what-give__card-text">
+                  Ты сможешь стать старшим наставником или сеньор-ревьювером
+                </p>
+              </li>
+              <li class="what-give__card what-give__animation">
+                <h4 class="what-give__card-title">
+                  Возможность менять жизни людей к лучшему
+                </h4>
+                <p class="what-give__card-text">
+                  Тысячи наших студентов нуждаются в твоих знаниях и опыте —
+                  не бойся ими делиться
+                </p>
+              </li>
+            </ul>
+            <button class="what-give__btn">К открытым позициям</button>
+          </div>
         </section>
 
         <section class="teaching main-width-block" id="teaching">
@@ -189,6 +190,29 @@
             <button type="button" class="slider__control slider__control_type_prev"></button>
             <div class="slider__wrapper main-width-block">
               <ul class="slider__inner">
+
+                <li class="slider__item">
+                  <div class="slider__item-inner slider__item-inner_type_video">
+                    <img src="<%=require('./images/vitaly.jpg')%>" alt="видеоотзыв" class="slider__item-video-cover">
+                    <button type="button" class="slider__item-play-btn" data-source="https://www.youtube.com/embed/lxcehpdwbkc"></button>
+                  </div>
+                  <div class="slider__item-caption">
+                    <h3 class="slider__item-person">Виталик Качановский</h3>
+                    <p class="slider__item-profession">Наставник на QA-факультете</p>
+                  </div>
+                </li>
+
+                <li class="slider__item">
+                  <div class="slider__item-inner slider__item-inner_type_video">
+                    <img src="<%=require('./images/anastasia.jpg')%>" alt="видеоотзыв" class="slider__item-video-cover">
+                    <button type="button" class="slider__item-play-btn" data-source="https://www.youtube.com/embed/8EXWLJEHdMk"></button>
+                  </div>
+                  <div class="slider__item-caption">
+                    <h3 class="slider__item-person">Анастасия Лемова</h3>
+                    <p class="slider__item-profession">Наставник на дизайн-факультете</p>
+                  </div>
+                </li>
+
                 <li class="slider__item">
                   <div class="slider__item-inner slider__item-inner_type_text">
                     <h4 class="slider__item-title">Улучшая мир</h4>
@@ -203,66 +227,38 @@
                     <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
                   </div>
                 </li>
+
                 <li class="slider__item">
                   <div class="slider__item-inner slider__item-inner_type_text">
-                    <h4 class="slider__item-title">Улучшая мир</h4>
+                    <h4 class="slider__item-title">Идеальный график</h4>
                     <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
-                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
-                      мне кажется, делаю мир чуть-чуть лучше
+                      Работа код-ревьюера с гибким графиком, благодаря ей я получаю дополнительный доход и могу делиться своим опытом. Ведь при написании кода важно не только большое количество практики, но и поддержка коллег.
                     </p>
                   </div>
                   <div class="slider__item-caption">
-                    <h3 class="slider__item-person">Максим Чеченёв</h3>
-                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
+                    <h3 class="slider__item-person">Артём Евсяков</h3>
+                    <p class="slider__item-profession">Старший код-ревьюер веб‑факультета"</p>
                   </div>
                 </li>
+
                 <li class="slider__item">
                   <div class="slider__item-inner slider__item-inner_type_text">
-                    <h4 class="slider__item-title">Улучшая мир</h4>
+                    <h4 class="slider__item-title">Новые горизонты</h4>
                     <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
-                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
-                      мне кажется, делаю мир чуть-чуть лучше
+                      С Практикумом меня объединяют любовь к технологиям, вера в онлайн-образование и желание помогать людям покорять новые горизонты. Сам почти полностью осваивал профессию онлайн, поэтому хочу и другим людям помочь в получении новых навыков.
                     </p>
                   </div>
                   <div class="slider__item-caption">
-                    <h3 class="slider__item-person">Максим Чеченёв</h3>
-                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
+                    <h3 class="slider__item-person">Толя Крестенко</h3>
+                    <p class="slider__item-profession">Наставник курса Data Science"</p>
                   </div>
                 </li>
-                <li class="slider__item">
-                  <div class="slider__item-inner slider__item-inner_type_text">
-                    <h4 class="slider__item-title">Улучшая мир</h4>
-                    <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
-                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
-                      мне кажется, делаю мир чуть-чуть лучше
-                    </p>
-                  </div>
-                  <div class="slider__item-caption">
-                    <h3 class="slider__item-person">Максим Чеченёв</h3>
-                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
-                  </div>
-                </li>
-                <li class="slider__item">
-                  <div class="slider__item-inner slider__item-inner_type_text">
-                    <h4 class="slider__item-title">Улучшая мир</h4>
-                    <p class="slider__item-text">
-                      Когда я учился писать код, не было онлайн-курсов и площадок с наставниками, и было сложно
-                      ориентироваться, что действительно важно знать и уметь, а что нет. Сейчас я делюсь своим опытом и,
-                      мне кажется, делаю мир чуть-чуть лучше
-                    </p>
-                  </div>
-                  <div class="slider__item-caption">
-                    <h3 class="slider__item-person">Максим Чеченёв</h3>
-                    <p class="slider__item-profession">Наставник на курсе "Веб разработчик"</p>
-                  </div>
-                </li>
+
               </ul>
             </div>
             <button type="button" class="slider__control slider__control_type_next"></button>
           </div>
+          <div class="slides__hearts"></div>
         </section>
         <section class="expectations main-width-block">
           <h2 class="section-title">Что Яндекс Практикум ждёт от тебя</h2>
@@ -275,23 +271,20 @@
                   делать выводы
                 </li>
                 <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
-                  делать выводы
+                  <span class="expectations__card-point-accent">отвечать</span> отвечать на их вопросы в чате
                 </li>
                 <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
-                  делать выводы
+                  <span class="expectations__card-point-accent">проводить</span> вебинары 2 раза в месяц и давать обратную связь
                 </li>
                 <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
-                  делать выводы
+                  <span class="expectations__card-point-accent">делиться</span> опытом и мотивировать
                 </li>
                 <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">помогать</span> студентам ставить цели, рефлексировать и
-                  делать выводы
+                  <span class="expectations__card-point-accent">поддерживать</span> примерно 50 студентов в потоке
                 </li>
               </ul>
-              <button onclick="document.location='./mentor.html'" class="expectations__card-button expectations__card-button_type_mentor">
+              <button onclick="document.location='./mentor.html'"
+                class="expectations__card-button expectations__card-button_type_mentor">
                 Хочу стать наставником
               </button>
             </div>
@@ -303,19 +296,15 @@
               <ul class="expectations__card-points">
                 <li class="expectations__card-point">
                   <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
-
                 </li>
                 <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+                  <span class="expectations__card-point-accent">объяснять</span> ошибки простыми словами
                 </li>
                 <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+                  <span class="expectations__card-point-accent">давать</span> корректирующую обратную связь
                 </li>
                 <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
-                </li>
-                <li class="expectations__card-point">
-                  <span class="expectations__card-point-accent">проверять</span> код и проекты студентов
+                  <span class="expectations__card-point-accent">оценивать</span> работы — зачёт/незачёт
                 </li>
               </ul>
               <button onclick="document.location='./vacancy.html'"
@@ -338,6 +327,7 @@
                 <span class="expectations__steps-number">3</span>Начни делиться знаниями со студентами Яндекс.Практикума
               </li>
             </ol>
+            <span class="expectations__steps-arrow-caption">Ты находишься здесь</span>
           </article>
         </section>
         <section class="vacancy main-width-block" id="vacancy">
@@ -348,8 +338,7 @@
               <option value="reviewer">Для ревьюеров</option>
             </select>
             <fieldset class="vacancy__filter-items">
-              <input checked name="area" value="programming" id="vacancy1" class="vacancy__filter-radio"
-              type="radio">
+              <input checked name="area" value="programming" id="vacancy1" class="vacancy__filter-radio" type="radio">
               <label for="vacancy1" class="vacancy__filter-item">Программирование</label>
               <input name="area" value="analytics" id="vacancy2" class="vacancy__filter-radio" type="radio">
               <label for="vacancy2" class="vacancy__filter-item">Аналитика</label>
@@ -364,7 +353,8 @@
           <div class="vacancy__no-results">
             <p class="vacancy__no-results-text">Таких вакансий пока нет &#128522;</p>
             <p class="vacancy__no-results-text">Чтобы посмотреть другие, поменяйте критерии на ваше усмотрение</p>
-            <p class="vacancy__no-results-subscribe">А чтобы быть в курсе появления вакансий - подпишитесь на наш Telegram-канал</p>
+            <p class="vacancy__no-results-subscribe">А чтобы быть в курсе появления вакансий - подпишитесь на наш
+              Telegram-канал</p>
           </div>
           <ul class="vacancy__results">
           </ul>
@@ -605,6 +595,17 @@
     <div class="popup popup_type_contacts">
       <div class="popup__inner">
         <button class="popup__close-btn" type="button"></button>
+      </div>
+    </div>
+    <div class="popup popup_type_video">
+      <div class="popup__inner popup__inner_type_video">
+        <iframe class="popup__video-iframe"
+          src=""
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+      </iframe>
+        <button class="popup__close-btn popup__close-btn_popup_video" type="button"></button>
       </div>
     </div>
   </div>
